--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practica</title>
 </head>
 <body>
-<h1>
-Hola, CH38</h1>
-<p>
-Feliz fin de semana</p>
-<button>Haz click</button>
+    <h1>
+        Hola, CH38</h1>
+        <p>
+        Feliz fin de semana</p>
+        <button>Haz click</button>
 </body>
 </html>
