style: estilos principales de la aplicación

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Practica</title>
 </head>
 <body>
-    <h1>
+    <header></header>
+
+    <main>
+           <h1>
         Hola, CH38</h1>
         <p>
         Feliz fin de semana</p>
-        <button>Haz click</button>
+        <p></p>
+        <button>Haz click</button> 
+    </main>
+    
+    <footer></footer>
+
 </body>
 </html>
