fix: se agrega parrafo y funcion

--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Practica</title>
+    <title>Practica 1</title>
 </head>
 <body>
     <header></header>
 
     <main>
-           <h1>
-        Hola, CH38</h1>
-        <p>
-        Feliz fin de semana</p>
+           <h1>CH 38</h1>
+        <p>Sesiones de las CH38 de Generation MX</p>
         <p></p>
         <button>Haz click</button> 
     </main>
-    
-    <footer></footer>
 
+    <footer></footer>
+<script src="./script.js"></script>
 </body>
 </html>
